# docker-compose.ymls

./: .gitignore  .gitmodules  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  Cargo.toml  README.md  cliff.toml  init.tmux  keybinds.toml  run.sh
.github/workflows/: publish.yml
adminer/: docker-compose.yml
containers/adminer/: docker-compose.yml
containers/mysql/: docker-compose.yml
containers/phpmyadmin/: docker-compose.yml
containers/postgres/: docker-compose.yml
containers/redis/: docker-compose.yml
docker-manager/: states.json
docker-manager/src/: app.rs  main.rs  status.rs
mongodb/: docker-compose.yml
moodle/: docker-compose.yml
mysql/: docker-compose.yml
odoo-14-docker-compose/: README.md  docker-compose.yml  entrypoint.sh
phpmyadmin/: docker-compose.yml
postgres/: docker-compose.yml
src/: actions.rs  app.rs  config.rs  event_handler.rs  main.rs  service.rs  status.rs  toast.rs  ui.rs
src/app/: daemon.rs  events.rs  init.rs  logs.rs  mod.rs  services.rs  state.rs
src/docker/: client.rs  compose.rs  daemon.rs  events.rs  mod.rs  process.rs
src/ui/: controls.rs  layout.rs  logs.rs  mod.rs  overlays.rs  services.rs  status_bar.rs
wordpress/: docker-compose.yml
